onekloud/common_static/css/onekloud/core.css
body {
    background: #f9f9f9;
}

a {
    color: #009cdd;
    text-decoration: none;
}

aside {
    background: #1f8dd6;
    padding: 0.3em 1em;
    border-radius: 3px;
    color: #fff;
}

dt {
    font-weight: bold;
}

::selection {
    background-color: #d5eafc;
}

::-moz-selection {
    background-color: #d5eafc;
}

/* Typography */

h1, h2, h3, h4, h5, h6 {
    color: #393e46;
}

h2 {
    margin: .3em 0 .5em;
}

h3, h4, h5, h6 {
    padding-bottom: .4em;
    border-bottom: 1px solid #e5e5e5;
}

/* Helper classes */

.gray {
    color: #959595;
}

.red {
    color: #ee5f5b;
}

.center {
    text-align: center;
}

.nomargin {
    margin: 0;
}

.nopadding {
    padding: 0;
}

.noborder {
    border: none;
}

.pull-left {
    float: left;
}

.pull-right {
    float: right;
}

.clearfix:before,
.clearfix:after {
    content: ' ';
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1; /* IE 6/7 */
}

/* Layout */

.wrap {
    max-width: 1000px;
    margin: 0 auto;
}

#content {
    margin-bottom: 50px;
    padding: 1em 0 3em;
}

#content p {
    line-height: 1.6em;
}

/* Header */

#header {
    padding: 1.2em 0;
    border-bottom: 1px solid #e5e5e5;
}

#header .l-box {
    padding-top: 0;
    padding-bottom: 0;
}

#logo {
    padding-top: .2em;
}

/* Pure */

.l-box {
    padding: 1em;
}

/* jQuery UI - Modal */

.modal {
    display: none;
}

.ui-widget-overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: rgba(226,226,226,.9);
}

.ui-dialog-titlebar {
    margin-bottom: 1.6em;
}

.ui-dialog-title {
    color: #393e46;
    font-size: 1.5em;
    font-weight: bold;
}

.ui-dialog-titlebar-close {
    float: right;
    width: auto;
    color: #ccc;
    font-size: 1.2em;
    font-family: 'FontAwesome', sans-serif;
    background: none;
    border: none;
    padding: 0;
}

.ui-dialog {
    padding: 2em;
    background: #fff;
    border-radius: .5em;
    box-shadow: 0 0 5px rgba(0,0,0,.1);
    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.1);
    -moz-box-shadow: 0 0 5px rgba(0,0,0,.1);
    -o-box-shadow: 0 0 5px rgba(0,0,0,.1);
    -ms-box-shadow: 0 0 5px rgba(0,0,0,.1);
}

/* Footer */

#footer {
    width: 100%;
    max-width: 1000px;
}

#footer .container {
    font-size: 75%;
    background: #f9f9f9;
    border-top: 1px solid #e5e5e5;
    padding-top: 1em;
    padding-bottom: 1em;
}

#footer .pure-menu {
    background: #f9f9f9;
}

#copyright {
    text-align: right;
    padding: 5px 20px;
}

